# spqe-mvp

./: .gitignore  COLOSSEUM_README.md  DEMO_SCRIPT.md  LAUNCH_KIT.md  OPENROUTER_AUDIT.md  OPENROUTER_REAL_AUDIT.md  PITCH_DEFENSES.md  README.md  STRATEGIC_LIQUIDITY_REPORT.md  STRATEGY.md  crypto_attacks.json  docker-compose.yml
agent-gateway/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
agent-gateway/e2e/: api.spec.ts  crypto-hacker.spec.ts  semaproof.spec.ts
agent-gateway/src/application/: validate-and-sign.ts
agent-gateway/src/domain/: intent.ts  squads-builder.ts
agent-gateway/src/infrastructure/: server.ts
agent-gateway/src/ports/: enclave-client.ts
agent-gateway/tests/: squads-builder.spec.ts  validate-and-sign.spec.ts
applications/: alliance_dao.md  arbitrum_trailblazer.md  ethglobal_cannes.md  foresight_institute.md  sui_foundation.md
nitro-enclave-signer/: .dockerignore  Cargo.toml  Dockerfile  manifest.json
nitro-enclave-signer/src/: evm_simulator.rs  main.rs  sui_simulator.rs  svm_decoder.rs
nitro-enclave-signer/src/application/: mod.rs  sign_intent.rs
nitro-enclave-signer/src/domain/: mod.rs  policy_engine.rs  pq_signer.rs  speculative_engine.rs
nitro-enclave-signer/src/infrastructure/: mod.rs  slm_client.rs  vsock_server.rs
nitro-enclave-signer/src/ports/: mod.rs
nitro-enclave-signer/tests/: pq_signer_test.rs  speculative_engine_test.rs
policy-evaluator/: Dockerfile  main.py  requirements.txt
policy-evaluator/domain/: policy_engine.py  slm_evaluator.py
policy-evaluator/tests/: test_policy_engine.py
scripts/: aws-spin-down.sh  aws-spin-up.sh  build-enclave.sh  deploy-gpu.sh
spqe-demo/: index.html  package-lock.json  package.json  playwright.config.ts
spqe-demo/e2e/: spqe.spec.ts
spqe-demo/src/: App.tsx  index.css
