[package]
name = "nitro-enclave-signer"
version = "0.1.0"
edition = "2021"
description = "Post-quantum cryptographic co-signer for Solana AI agents, running inside AWS Nitro Enclaves"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (vsock-compatible)
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# HTTP client for SLM
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Post-quantum cryptography (ML-DSA via liboqs)
oqs = { version = "0.10", features = ["sigs"] }

# Solana-compatible Ed25519 signing
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Crypto utilities
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Timing
tokio-util = "0.7"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "speculative_bench"
harness = false
