[package]
name = "nitro-enclave-signer"
version = "0.1.0"
edition = "2021"
description = "Post-quantum cryptographic co-signer for Solana AI agents, running inside AWS Nitro Enclaves"

[dependencies]
async-trait = "0.1"
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (vsock-compatible)
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# HTTP client for SLM
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Post-quantum cryptography (ML-DSA via liboqs)
oqs = { version = "0.10", features = ["sigs"] }

# Solana-compatible Ed25519 signing
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Crypto utilities
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Timing
tokio-util = "0.7"
hex = "0.4.3"
bytes = "1.11.1"
k256 = { version = "0.13.4", features = ["ecdsa"] }
sha3 = "0.10.8"
solana-sdk = "4.0.1"
bs58 = "0.5.1"
base64 = "0.22.1"
bincode = "1.3.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
criterion = { version = "0.5", features = ["async_tokio"] }

